# asd_course

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  solve  solve.cpp  solve.py  t.py
scripts/: build.sh  test.sh  testcpp.sh  testpy.sh
src/asd_course/: __init__.py
src/asd_course/IntroLab/: lab.py  solve.cpp
src/asd_course/base_module/: __init__.py  base_task.py
src/asd_course/lab0_intro/: __init__.py  lab.py  solution.cpp
tst/: test.py
tst/IntroLab/: solve.py
tst/IntroLab/fail/: compile.cpp  segfault.cpp  time_limit.cpp  wrong_answer.py
tst/IntroLab/success/: solution_2.py
